# SerenMargin

./: .gitignore  README.md  SerenMargin.slnx
.github/: dependabot.yml
.github/workflows/: release.yml
SerenMargin/: SerenMargin.pyproj  pyproject.toml  seren-margin.service.sample  seren-margin.yaml.sample
SerenMargin/seren_margin/: __init__.py  __main__.py  app.py  config.py  mcp-manifest.yaml  models.py  store.py
SerenMargin/tests/: test_config.py  test_smoke.py
